fix bag in TravelService